--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="main-container">
             <div class="pd-50"><img src="images/profile-pic.svg" ></div>
             <div class="profile-name">
+                <p>Liz Puah</p>
                 <p>@barryzeunicorn<br>
                     ‧͙⁺˚*･༓☾ hi ☽༓･*˚⁺‧͙ 
                 </p>
